# sysbuild

./: .gitignore  INSTALL  Kyuafile  Makefile.am  NEWS  NetBSD.conf  README  configure.ac  default.conf  sysbuild.1.in  sysbuild.conf.5  sysbuild.sh  sysbuild4cron.1  sysbuild4cron.sh  sysbuild4cron_test.sh  sysbuild_test.sh
.github/workflows/: distcheck.sh  install-shtk.sh  test.yml
admin/: clean-all.sh
